@startuml
class           PKBFacadeWriter
class           PKBFacadeReader
class           PKB
class           FollowsStore
class           ParentsStore
class           UsesStore
class           ModifiesStore
class           StatementStore
class           EntityStore
class           PatternStore
PKBFacadeWriter           -->           PKB
PKBFacadeReader           -->           PKB
PKB           -->           FollowsStore
PKB           -->           ParentsStore
PKB           -->           UsesStore
PKB           -->           ModifiesStore
PKB           -->           StatementStore
PKB           -->           EntityStore
PKB           -->           PatternStore
@enduml
